2004-05-04  Christian Kellner <gicmo@xatom.net>

	* providers/groupwise/camel-gw-listener.h: Fixed typo.

2004-05-04  Not Zed  <NotZed@Ximian.com>

	** See #57979.

	* camel-vee-folder.c (subfolder_renamed_update): when the
	subfolder gets renamed, remove all the old uid's and add the new
	ones (since the uid is based on the subordinate folder name).
	(subfolder_renamed): listen to renamed folder events.

	* providers/local/camel-mbox-store.c (get_folder_info): if we're
	getting a single folder with no children, make sure we fill the
	counts out.  Fixes some rename strangeness.

	* camel-vee-folder.c (camel_vee_folder_add_folder): hook onto the
	folder renamed signal.
	(camel_vee_folder_finalise): unhook folder_renamed signal.
	(camel_vee_folder_remove_folder): same.

2004-05-03  Not Zed  <NotZed@Ximian.com>

	** See bug #57881.

	* camel-vee-folder.c (camel_vee_folder_add_folder): use the
	folder's change log and frozen count, not our copy.
	(vee_thaw): dont maintain our frozen count.
	(vee_freeze): same.
	(folder_changed_change): if we get changed messages that dont
	match, make sure they're also propagated as a change too.

	* camel-private.h: remove the freeze_count from
	camelveefolderprivate.  We already have that in the camel folder
	private.

2004-04-30  Priit Laes  <amd@tt.ee>

	* providers/nntp/camel-nntp-summary.c: Fix typo. #53466.

2004-04-28  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-folder.c: Change the UID_SET_LIMIT to
	768 (something <1000 octets as suggested by rfc2683). Fixes bug
	#57389.

	* camel-smime-context.c: Mark exception strings for translation
	and fixed a spelling mistake.

2004-04-27  Not Zed  <NotZed@Ximian.com>

	** See bug #57659.

	* camel-vee-store.c (vee_get_folder_info): translate Unmatched in
	the folder display name.

	* camel-store.c (add_special_info): dont translate full_name or
	path, only do that for name.

2004-04-23  Sarfraaz Ahmed <asarfraaz@novell.com>
	