@@ -1,3 +1,10 @@
+2004-05-04  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* camel-session.h: Get rid of #ifdef ENABLE_THREADS stuff, that
+	was done away with a while back and is causing problems for 3rd
+	parties trying to use camel unless they explicityly #define
+	ENABLE_THREADS in their code.
+
 2004-05-04  Christian Kellner <gicmo@xatom.net>
 
 	* providers/groupwise/camel-gw-listener.h: Fixed typo.
